Count equipped and stackable Robes requirements
* Count equipped Robes requirements

* Show equipped Robes requirements in overlay

* Cache Robes inventory and equipment requirements on client tick

* Add temporary Robes equipped-requirements compile check

* Make Robes requirements quantity-aware for stackables

* Remove temporary Robes equipped-requirements compile check